# projectry_py

./: .gitignore  pyproject.toml  readme.md  run.py
projectry/: main.py
projectry/controller/: controller.py
projectry/data/: dataclasses.py  interfaces.py  mixins.py
projectry/data/interfaces/: view.py
projectry/data/language_models/: common_model.py
projectry/model/: __init__.py  get_screen_size.py
projectry/view/: __all_windows__.py  app.py  choose_project_window.py  main_window.py  work_with_project_window.py
